# CADDack

./: .gitignore  LICENSE  README.md  examples.ipynb  pyproject.toml
data/raw/: mols.csv
docs/: caddack_gnn_math.tex
examples/: 01_qsar_featurization.py  02_scaffold_split.py  03_gnn_graph_construction.py  04_train_gnn_from_csv.py  05_bayesian_fusion_model.py
models/qsar/MolWt/: features.json  metrics.json  model.joblib  split.json
models/qsar/pIC50/: metrics.json  model.joblib  split.json
scripts/: benchmark_fusion.py  fetch_structures.py  run_qsar.py  run_qsar_descriptors.py  train_fusion.py  train_gnn.py  train_qsar.py
src/caddack/: cli.py
src/caddack/data/raw/chembl/: CHEMBL111197.smi  CHEMBL113070.smi  CHEMBL116853.smi  CHEMBL1202477.smi  CHEMBL1202478.smi  CHEMBL12186.smi  CHEMBL125568.smi  CHEMBL126137.smi  CHEMBL126372.smi  CHEMBL126384.smi  CHEMBL126623.smi  CHEMBL126791.smi  CHEMBL126893.smi  CHEMBL126903.smi  CHEMBL127041.smi  CHEMBL127058.smi  CHEMBL127082.smi  CHEMBL127086.smi  CHEMBL12713.smi  CHEMBL127611.smi  CHEMBL12780.smi  CHEMBL128432.smi  CHEMBL128467.smi  CHEMBL128468.smi  CHEMBL128759.smi  CHEMBL128987.smi  CHEMBL129509.smi  CHEMBL129579.smi  CHEMBL129583.smi  CHEMBL129824.smi  CHEMBL129825.smi  CHEMBL132348.smi  CHEMBL133023.smi  CHEMBL133024.smi  (+216 more)
src/caddack/fetch/: fetch_structures.py
src/caddack/gnn/: __init__.py  bayes.py  datasets.py  geometry.py  models.py  train.py
src/caddack/qsar/: __init__.py  descriptors.py  run_qsar_descriptors.py  split.py
tests/: conftest.py  test_fetch_structures.py  test_fusion.py  test_imports.py
