[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caddack"
version = "0.1.0"
description = "CADDack: modular CADD toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Ata Ozkan"}]
dependencies = []

[project.scripts]
caddack = "caddack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
